fix nav (visibility)

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -84,6 +84,7 @@
 .subnav-content {
   position: absolute;
   display: flex;
+  visibility: hidden;
   justify-content: flex-end;
   right: 0;
   background-color: white;
@@ -108,6 +109,7 @@
 }
 
 .shownav {
+  visibility: visible;
   transition: all 1s;
   opacity: 1;
 }
