--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  visibility: hidden;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -166,6 +167,7 @@ body {
   color: #fa7a24; }
 
 .shownav {
+  visibility: visible;
   -webkit-transition: all 1s;
   transition: all 1s;
   opacity: 1; }
